--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "richmenu-editor",
   "version": "1.0.0",
-  "description": "LINE RichMenu Editor(unofficial)",
+  "description": "LINE RichMenu Editor",
   "author": "e-chan",
   "private": true,
   "scripts": {
@@ -23,10 +23,14 @@
     "@nuxtjs/eslint-module": "^1.0.0",
     "@nuxtjs/style-resources": "^1.0.0",
     "babel-eslint": "^10.0.1",
+    "body-parser": "^1.19.0",
     "eslint": "^6.1.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-nuxt": ">=0.4.2",
     "eslint-plugin-prettier": "^3.1.2",
+    "file-type": "^14.4.0",
+    "form-data": "^3.0.0",
+    "node-fetch": "^2.6.0",
     "node-sass": "^4.14.1",
     "nodemon": "^1.18.9",
     "prettier": "^1.19.1",
