--- a/package.json
+++ b/package.json
@@ -1,39 +1,27 @@
 {
   "name": "richmenu-editor",
-  "version": "1.0.0",
-  "description": "LINE RichMenu Editor",
-  "author": "e-chan",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
-    "build": "nuxt generate",
-    "start": "cross-env NODE_ENV=production node server/index.js",
-    "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@nuxtjs/pwa": "^3.0.0-0",
-    "cross-env": "^5.2.0",
-    "express": "^4.16.4",
-    "nuxt": "^2.0.0"
+    "@types/node": "^15.12.5",
+    "@types/react": "^17.0.11",
+    "@types/react-dom": "^17.0.8",
+    "@typescript-eslint/eslint-plugin": "^4.28.0",
+    "@typescript-eslint/parser": "^4.28.0",
+    "eslint-plugin-react": "^7.24.0",
+    "next": "11.0.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "typescript": "^4.3.4"
   },
   "devDependencies": {
-    "@nuxt/typescript-build": "^0.6.0",
-    "@nuxtjs/eslint-config-typescript": "^1.0.0",
-    "@nuxtjs/eslint-module": "^1.0.0",
-    "@nuxtjs/style-resources": "^1.0.0",
-    "babel-eslint": "^10.0.1",
-    "body-parser": "^1.19.0",
-    "eslint": "^6.1.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-nuxt": ">=0.4.2",
-    "eslint-plugin-prettier": "^3.1.2",
-    "file-type": "^14.4.0",
-    "form-data": "^3.0.0",
-    "node-fetch": "^2.6.0",
-    "node-sass": "^4.14.1",
-    "nodemon": "^1.18.9",
-    "prettier": "^1.19.1",
-    "sass-loader": "^8.0.2"
+    "eslint": "7.29.0",
+    "eslint-config-next": "11.0.1"
   }
 }
