--- a/package.json
+++ b/package.json
@@ -11,20 +11,45 @@
   "dependencies": {
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
-    "@material-ui/core": "^5.0.0-alpha.38",
-    "@types/node": "^15.12.5",
-    "@types/react": "^17.0.11",
-    "@types/react-dom": "^17.0.8",
-    "@typescript-eslint/eslint-plugin": "^4.28.0",
-    "@typescript-eslint/parser": "^4.28.0",
+    "@line/bot-sdk": "^7.3.0",
+    "@material-ui/core": "^5.0.0-beta.1",
+    "@material-ui/icons": "^5.0.0-beta.1",
+    "@material-ui/lab": "^5.0.0-alpha.40",
+    "@types/node": "^16.4.0",
+    "@types/prismjs": "^1.16.6",
+    "@types/react": "^17.0.14",
+    "@types/react-dom": "^17.0.9",
+    "@typescript-eslint/eslint-plugin": "^4.28.4",
+    "@typescript-eslint/parser": "^4.28.4",
+    "@zeit/next-css": "^1.0.1",
+    "ajv": "^8.6.2",
+    "ajv-errors": "^3.0.0",
+    "axios": "^0.21.1",
+    "dayjs": "^1.10.6",
+    "dexie": "^3.0.3",
     "eslint-plugin-react": "^7.24.0",
+    "file-loader": "^6.2.0",
+    "monaco-editor": "^0.26.1",
+    "monaco-editor-webpack-plugin": "^4.1.1",
     "next": "11.0.1",
+    "next-transpile-modules": "^8.0.0",
+    "prismjs": "^1.24.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "typescript": "^4.3.4"
+    "react-draggable": "^4.4.3",
+    "react-monaco-editor": "^0.43.0",
+    "react-smooth-dnd": "^0.11.1",
+    "rfdc": "^1.3.0",
+    "sass": "^1.35.2",
+    "swr": "^0.5.6",
+    "typescript": "^4.3.5",
+    "url-loader": "^4.1.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "eslint": "7.29.0",
-    "eslint-config-next": "11.0.1"
+    "eslint": "7.31.0",
+    "eslint-config-next": "11.0.1",
+    "monaco-editor-esm-webpack-plugin": "^2.0.0",
+    "webpack": "^5.46.0"
   }
 }
