--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "dexie": "^3.0.3",
     "eslint-plugin-react": "^7.24.0",
     "file-loader": "^6.2.0",
+    "firebase": "^9.0.2",
     "jszip": "^3.7.0",
     "monaco-editor": "^0.26.1",
     "monaco-editor-webpack-plugin": "^4.1.1",
     "next": "11.0.1",
+    "next-pwa": "^5.3.1",
     "next-transpile-modules": "^8.0.0",
     "prismjs": "^1.24.1",
     "react": "17.0.2",
