--- a/package.json
+++ b/package.json
@@ -9,50 +9,50 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.4.0",
+    "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
-    "@line/bot-sdk": "^7.3.0",
+    "@line/bot-sdk": "^7.4.0",
     "@material-ui/core": "^5.0.0-beta.1",
     "@material-ui/icons": "^5.0.0-beta.1",
     "@material-ui/lab": "^5.0.0-alpha.40",
-    "@types/node": "^16.4.0",
+    "@types/node": "^16.11.6",
     "@types/prismjs": "^1.16.6",
-    "@types/react": "^17.0.14",
-    "@types/react-dom": "^17.0.9",
-    "@typescript-eslint/eslint-plugin": "^4.28.4",
-    "@typescript-eslint/parser": "^4.28.4",
+    "@types/react": "^17.0.33",
+    "@types/react-dom": "^17.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.2.0",
+    "@typescript-eslint/parser": "^5.2.0",
     "@zeit/next-css": "^1.0.1",
-    "ajv": "^8.6.2",
+    "ajv": "^8.6.3",
     "ajv-errors": "^3.0.0",
-    "axios": "^0.21.2",
-    "dayjs": "^1.10.6",
+    "axios": "^0.24.0",
+    "dayjs": "^1.10.7",
     "dexie": "^3.0.3",
-    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react": "^7.26.1",
     "file-loader": "^6.2.0",
-    "firebase": "^9.0.2",
-    "jszip": "^3.7.0",
-    "monaco-editor": "^0.26.1",
-    "monaco-editor-webpack-plugin": "^4.1.1",
-    "next": "11.1.1",
-    "next-pwa": "^5.3.1",
-    "next-transpile-modules": "^8.0.0",
+    "firebase": "^9.1.3",
+    "jszip": "^3.7.1",
+    "monaco-editor": "0.29.1",
+    "monaco-editor-webpack-plugin": "5.0.0",
+    "next": "^12.0.1",
+    "next-pwa": "^5.4.0",
+    "next-transpile-modules": "^9.0.0",
     "prismjs": "^1.25.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-draggable": "^4.4.3",
-    "react-monaco-editor": "^0.43.0",
+    "react-draggable": "^4.4.4",
+    "react-monaco-editor": "^0.46.0",
     "react-smooth-dnd": "^0.11.1",
     "rfdc": "^1.3.0",
-    "sass": "^1.35.2",
-    "swr": "^0.5.6",
-    "typescript": "^4.3.5",
+    "sass": "^1.43.4",
+    "swr": "^1.0.1",
+    "typescript": "^4.4.4",
     "url-loader": "^4.1.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "eslint": "7.31.0",
-    "eslint-config-next": "11.0.1",
+    "eslint": "<8.0.0",
+    "eslint-config-next": "12.0.1",
     "monaco-editor-esm-webpack-plugin": "^2.0.0",
-    "webpack": "^5.46.0"
+    "webpack": "5.24.3"
   }
 }
