依存関係とパフォーマンス改善

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,6 +11,7 @@
 	},
 	"settings": {},
 	"extensions": [
+		"arcanis.vscode-zipfs",
 		"dbaeumer.vscode-eslint"
 	],
 	"postCreateCommand": "yarn install",
