--- a/package.json
+++ b/package.json
@@ -13,47 +13,45 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@line/bot-sdk": "^7.4.0",
-    "@material-ui/core": "^5.0.0-beta.1",
-    "@material-ui/icons": "^5.0.0-beta.1",
-    "@material-ui/lab": "^5.0.0-alpha.40",
-    "@types/node": "^17.0.9",
-    "@types/prismjs": "^1.16.6",
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.10.0",
-    "@typescript-eslint/parser": "^5.10.0",
+    "@mui/icons-material": "^5.4.1",
+    "@mui/lab": "^5.0.0-alpha.68",
+    "@mui/material": "^5.4.1",
+    "@mui/styles": "^5.4.1",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
     "@zeit/next-css": "^1.0.1",
-    "ajv": "^8.9.0",
+    "ajv": "^8.10.0",
     "ajv-errors": "^3.0.0",
     "axios": "^0.25.0",
     "dayjs": "^1.10.7",
     "dexie": "^3.2.0",
-    "eslint-plugin-react": "^7.28.0",
-    "file-loader": "^6.2.0",
-    "firebase": "^9.6.3",
     "jszip": "^3.7.1",
-    "monaco-editor": "0.31.1",
-    "monaco-editor-webpack-plugin": "7.0.1",
-    "next": "^12.0.9",
+    "monaco-editor": "0.32.1",
+    "next": "^12.0.10",
     "next-pwa": "^5.4.4",
-    "next-transpile-modules": "^9.0.0",
     "prismjs": "^1.26.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-draggable": "^4.4.4",
-    "react-monaco-editor": "^0.47.0",
-    "react-smooth-dnd": "^0.11.1",
     "rfdc": "^1.3.0",
-    "sass": "^1.48.0",
-    "swr": "^1.1.2",
-    "typescript": "^4.5.4",
-    "url-loader": "^4.1.1",
+    "swr": "^1.2.1",
+    "typescript": "^4.5.5",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "eslint": "8.7.0",
-    "eslint-config-next": "12.0.8",
-    "monaco-editor-esm-webpack-plugin": "^2.0.0",
-    "webpack": "5.66.0"
-  }
+    "@types/node": "^17.0.17",
+    "@types/prismjs": "^1.26.0",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
+    "eslint": "8.8.0",
+    "eslint-config-next": "12.0.10",
+    "eslint-plugin-react": "^7.28.0",
+    "file-loader": "^6.2.0",
+    "monaco-editor-webpack-plugin": "^7.0.1",
+    "next-transpile-modules": "^9.0.0",
+    "sass": "^1.49.7",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.68.0"
+  },
+  "packageManager": "yarn@3.1.1"
 }
