--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,8 @@
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
+    "next.config.mjs"
   ],
   "exclude": [
     "node_modules"
