srcに移動, バグ修正, Workerで負荷軽減

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
       "esnext"
     ],
     "allowJs": true,
-    "baseUrl": ".",
+    "baseUrl": "./src",
     "skipLibCheck": true,
     "strict": false,
     "importHelpers": true,
