--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "richmenu-editor",
-  "version": "2.0.0",
-  "private": true,
+  "name": "line-richmenu-editor",
+  "license": "MIT",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -10,43 +9,43 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@line/bot-sdk": "^7.5.0",
-    "@mui/icons-material": "^5.6.2",
-    "@mui/lab": "^5.0.0-alpha.81",
-    "@mui/material": "^5.7.0",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/lab": "^5.0.0-alpha.87",
+    "@mui/material": "^5.8.5",
     "ajv": "^8.11.0",
     "axios": "^0.27.2",
-    "dayjs": "^1.11.2",
+    "dayjs": "^1.11.3",
     "dexie": "^3.2.2",
-    "jszip": "^3.9.1",
+    "jszip": "^3.10.0",
     "monaco-editor": "0.33.0",
     "next": "^12.1.6",
-    "next-pwa": "^5.5.2",
+    "next-pwa": "^5.5.4",
     "prismjs": "^1.28.0",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-draggable": "^4.4.5",
     "rfdc": "^1.3.0",
     "swr": "^1.3.0",
-    "typescript": "^4.6.4",
+    "typescript": "^4.7.4",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@e-chan1007/eslint-config-react": "^1.0.4",
-    "@types/node": "^17.0.33",
+    "@e-chan1007/eslint-config-react": "^1.0.5",
+    "@types/node": "^17.0.45",
     "@types/prismjs": "^1.26.0",
-    "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.4",
-    "eslint": "8.15.0",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5",
+    "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
     "file-loader": "^6.2.0",
     "monaco-editor-webpack-plugin": "^7.0.1",
     "next-transpile-modules": "^9.0.0",
-    "sass": "^1.51.0",
+    "sass": "^1.53.0",
     "url-loader": "^4.1.1",
-    "webpack": "^5.72.1"
+    "webpack": "^5.73.0"
   },
-  "packageManager": "yarn@3.1.1"
+  "packageManager": "yarn@3.2.1"
 }
