--- a/package.json
+++ b/package.json
@@ -12,16 +12,17 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@line/bot-sdk": "^7.5.0",
+    "@monaco-editor/loader": "^1.3.2",
     "@mui/icons-material": "^5.8.4",
-    "@mui/lab": "^5.0.0-alpha.87",
-    "@mui/material": "^5.8.5",
+    "@mui/lab": "^5.0.0-alpha.88",
+    "@mui/material": "^5.8.6",
     "ajv": "^8.11.0",
     "axios": "^0.27.2",
     "dayjs": "^1.11.3",
     "dexie": "^3.2.2",
     "jszip": "^3.10.0",
     "monaco-editor": "0.33.0",
-    "next": "^12.1.6",
+    "next": "^12.2.0",
     "next-pwa": "^5.5.4",
     "prismjs": "^1.28.0",
     "react": "18.2.0",
@@ -39,10 +40,8 @@
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "eslint": "8.18.0",
-    "eslint-config-next": "12.1.6",
+    "eslint-config-next": "12.2.0",
     "file-loader": "^6.2.0",
-    "monaco-editor-webpack-plugin": "^7.0.1",
-    "next-transpile-modules": "^9.0.0",
     "sass": "^1.53.0",
     "url-loader": "^4.1.1",
     "webpack": "^5.73.0"
