--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/lab": "^5.0.0-alpha.88",
     "@mui/material": "^5.8.6",
+    "@zip.js/zip.js": "^2.4.26",
     "ajv": "^8.11.0",
     "axios": "^0.27.2",
     "dayjs": "^1.11.3",
     "dexie": "^3.2.2",
-    "jszip": "^3.10.0",
+    "dexie-export-import": "^1.0.3",
     "monaco-editor": "0.33.0",
     "next": "^12.2.0",
     "next-pwa": "^5.5.4",
@@ -39,7 +40,8 @@
     "@types/prismjs": "^1.26.0",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
-    "eslint": "8.18.0",
+    "@types/wicg-file-system-access": "^2020.9.5",
+    "eslint": "8.19.0",
     "eslint-config-next": "12.2.0",
     "file-loader": "^6.2.0",
     "sass": "^1.53.0",
