--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es2021",
+    "target": "esnext",
     "lib": [
       "dom",
       "dom.iterable",
@@ -23,7 +23,8 @@
     "types": [
       "@types/node",
       "@types/react",
-      "@types/react-dom"
+      "@types/react-dom",
+      "@types/wicg-file-system-access"
     ],
     "incremental": true
   },
