--- a/package.json
+++ b/package.json
@@ -4,27 +4,26 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "generate": "next build && next export && mkdir -p ./out/_next/node_modules/monaco-editor && cp -r ./node_modules/monaco-editor/* ./out/_next/node_modules/monaco-editor",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
     "@line/bot-sdk": "^7.5.0",
     "@monaco-editor/loader": "^1.3.2",
     "@mui/icons-material": "^5.8.4",
-    "@mui/lab": "^5.0.0-alpha.88",
-    "@mui/material": "^5.8.6",
-    "@zip.js/zip.js": "^2.4.26",
+    "@mui/lab": "^5.0.0-alpha.94",
+    "@mui/material": "^5.10.0",
+    "@zip.js/zip.js": "^2.6.12",
     "ajv": "^8.11.0",
     "axios": "^0.27.2",
-    "dayjs": "^1.11.3",
+    "dayjs": "^1.11.4",
     "dexie": "^3.2.2",
     "dexie-export-import": "^1.0.3",
-    "monaco-editor": "0.33.0",
-    "next": "^12.2.0",
-    "next-pwa": "^5.5.4",
+    "monaco-editor": "0.34.0",
+    "next": "^12.2.4",
+    "next-pwa": "5.5.4",
     "prismjs": "^1.28.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -36,17 +35,17 @@
   },
   "devDependencies": {
     "@e-chan1007/eslint-config-react": "^1.0.5",
-    "@types/node": "^17.0.45",
+    "@types/node": "^18.6.5",
     "@types/prismjs": "^1.26.0",
-    "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5",
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
     "@types/wicg-file-system-access": "^2020.9.5",
-    "eslint": "8.19.0",
-    "eslint-config-next": "12.2.0",
+    "eslint": "8.21.0",
+    "eslint-config-next": "12.2.4",
     "file-loader": "^6.2.0",
-    "sass": "^1.53.0",
+    "sass": "^1.54.4",
     "url-loader": "^4.1.1",
-    "webpack": "^5.73.0"
+    "webpack": "^5.74.0"
   },
   "packageManager": "yarn@3.2.1"
 }
