--- a/package.json
+++ b/package.json
@@ -8,44 +8,44 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.0",
-    "@emotion/styled": "^11.10.0",
-    "@line/bot-sdk": "^7.5.0",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@line/bot-sdk": "^7.5.2",
     "@monaco-editor/loader": "^1.3.2",
-    "@mui/icons-material": "^5.8.4",
-    "@mui/lab": "^5.0.0-alpha.94",
-    "@mui/material": "^5.10.0",
-    "@zip.js/zip.js": "^2.6.12",
-    "ajv": "^8.11.0",
-    "axios": "^0.27.2",
-    "dayjs": "^1.11.4",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/lab": "^5.0.0-alpha.115",
+    "@mui/material": "^5.11.4",
+    "@zip.js/zip.js": "^2.6.62",
+    "ajv": "^8.12.0",
+    "axios": "^1.2.2",
+    "dayjs": "^1.11.7",
     "dexie": "^3.2.2",
     "dexie-export-import": "^1.0.3",
-    "monaco-editor": "0.34.0",
-    "next": "^12.2.4",
-    "next-pwa": "5.5.4",
-    "prismjs": "^1.28.0",
+    "monaco-editor": "0.34.1",
+    "next": "^13.1.2",
+    "next-pwa": "5.6.0",
+    "prismjs": "^1.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-draggable": "^4.4.5",
     "rfdc": "^1.3.0",
-    "swr": "^1.3.0",
-    "typescript": "^4.7.4",
-    "uuid": "^8.3.2"
+    "swr": "^2.0.0",
+    "typescript": "^4.9.4",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@e-chan1007/eslint-config-react": "^1.0.5",
-    "@types/node": "^18.6.5",
+    "@e-chan1007/eslint-config-react": "^1.1.3",
+    "@types/next-pwa": "^5.6.1",
+    "@types/node": "^18.11.18",
     "@types/prismjs": "^1.26.0",
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
     "@types/wicg-file-system-access": "^2020.9.5",
-    "eslint": "8.21.0",
-    "eslint-config-next": "12.2.4",
+    "eslint": "8.32.0",
+    "eslint-config-next": "13.1.2",
     "file-loader": "^6.2.0",
-    "sass": "^1.54.4",
-    "url-loader": "^4.1.1",
-    "webpack": "^5.74.0"
+    "sass": "^1.57.1",
+    "url-loader": "^4.1.1"
   },
-  "packageManager": "yarn@3.2.1"
+  "packageManager": "yarn@3.3.1"
 }
